fix: message overflow

--- a/src/components/Chat/ChannelMessage.module.scss
+++ b/src/components/Chat/ChannelMessage.module.scss
@@ -41,6 +41,9 @@
 }
 
 .user_message {
+    overflow: hidden;
+    overflow-wrap: anywhere;
+
     display: flex;
     flex-direction: column;
     gap: 5px;
